--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
-            >Web<span class="logo-studio-word-header">Studio</span></a
-          >
+            >Web<span class="logo-studio-word-header">Studio</span>
+          </a>
           <ul class="menu">
             <li>
               <a class="link-nav" href="./index.html">Studio</a>
@@ -72,6 +72,9 @@
           <h2 class="visually-hidden">Studio</h2>
           <ul class="studio-list">
             <li class="studio-list-elements">
+              <svg width="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="sub-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +82,9 @@
               </p>
             </li>
             <li class="studio-list-elements">
+              <svg width="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="sub-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +92,9 @@
               </p>
             </li>
             <li class="studio-list-elements">
+              <svg width="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="sub-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +102,9 @@
               </p>
             </li>
             <li class="studio-list-elements">
+              <svg width="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="sub-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
