add icons.svg, update index.html, update.styles.css

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
           <h2 class="visually-hidden">Studio</h2>
           <ul class="studio-list">
             <li class="studio-list-elements">
-              <svg width="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="studio-list-icons">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -82,9 +84,11 @@
               </p>
             </li>
             <li class="studio-list-elements">
-              <svg width="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="studio-list-icons">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -92,9 +96,11 @@
               </p>
             </li>
             <li class="studio-list-elements">
-              <svg width="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="studio-list-icons">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -102,9 +108,11 @@
               </p>
             </li>
             <li class="studio-list-elements">
-              <svg width="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="studio-list-icons">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -129,6 +137,28 @@
               <div class="employees-info">
                 <h3 class="sub-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <div class="our-team-contacts">
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -142,6 +172,28 @@
               <div class="employees-info">
                 <h3 class="sub-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <div class="our-team-contacts">
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -155,6 +207,28 @@
               <div class="employees-info">
                 <h3 class="sub-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+                <div class="our-team-contacts">
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -168,6 +242,28 @@
               <div class="employees-info">
                 <h3 class="sub-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <div class="our-team-contacts">
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="our-team-social-media-icons">
+                    <svg width="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
@@ -179,12 +275,19 @@
           <h2 class="title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-elements">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Banking App</h3>
                 <p class="text">App</p>
@@ -192,12 +295,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <img
-                src="./images/cashiess-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/cashiess-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
@@ -205,12 +315,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Meditation App</h3>
                 <p class="text">App</p>
@@ -218,12 +335,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Taxi Service</h3>
                 <p class="text">Marketing</p>
@@ -231,12 +355,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Screen Illustrations</h3>
                 <p class="text">Design</p>
@@ -244,12 +375,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-for-apps">
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -270,6 +408,29 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+
+        <p class="footer-social-media">Social media</p>
+
+        <div class="footer-icons-social-media">
+          <svg width="24">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </div>
+        <div class="footer-icons-social-media">
+          <svg width="24">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </div>
+        <div class="footer-icons-social-media">
+          <svg width="24">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </div>
+        <div class="footer-icons-social-media">
+          <svg width="24">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </div>
       </div>
     </footer>
   </body>
