--- a/index.html
+++ b/index.html
@@ -137,28 +137,52 @@
               <div class="employees-info">
                 <h3 class="sub-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-                <div class="our-team-contacts">
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="our-team-contacts">
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -172,28 +196,52 @@
               <div class="employees-info">
                 <h3 class="sub-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
-                <div class="our-team-contacts">
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="our-team-contacts">
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -207,28 +255,52 @@
               <div class="employees-info">
                 <h3 class="sub-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-                <div class="our-team-contacts">
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="our-team-contacts">
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -242,28 +314,52 @@
               <div class="employees-info">
                 <h3 class="sub-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-                <div class="our-team-contacts">
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="our-team-social-media-icons">
-                    <svg width="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="our-team-contacts">
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="our-team-contacts-link" href="">
+                      <svg
+                        class="our-team-contacts-icon"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -275,12 +371,13 @@
           <h2 class="title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking App"
@@ -295,12 +392,13 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/cashiess-payment.jpg"
                   alt="Cashless Payment"
@@ -315,12 +413,13 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
@@ -335,12 +434,13 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Taxi Service"
@@ -355,12 +455,13 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations"
@@ -375,12 +476,13 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay-for-apps">
-                <div class="overlay">
+              <div class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
+
                 <img
                   src="./images/online-courses.jpg"
                   alt="Online Courses"
@@ -400,36 +502,50 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-studio-word-footer">Studio</span></a
-        >
+        <div class="logo-p-footer">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio-word-footer">Studio</span></a
+          >
 
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
 
-        <p class="footer-social-media">Social media</p>
+        <div class="footer-social-media">
+          <p class="social-media-title">Social media</p>
 
-        <div class="footer-icons-social-media">
-          <svg width="24">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </div>
-        <div class="footer-icons-social-media">
-          <svg width="24">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
-        </div>
-        <div class="footer-icons-social-media">
-          <svg width="24">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </div>
-        <div class="footer-icons-social-media">
-          <svg width="24">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-          </svg>
+          <ul class="social-media-list">
+            <li class="icons-social-media">
+              <a class="social-media-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-social-media">
+              <a class="social-media-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-social-media">
+              <a class="social-media-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-social-media">
+              <a class="social-media-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
