update index.html, update styles.css

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h3 class="sub-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
                 <ul class="our-team-contacts">
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -149,7 +149,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -160,7 +160,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -171,7 +171,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -197,7 +197,7 @@
                 <h3 class="sub-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
                 <ul class="our-team-contacts">
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -208,7 +208,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -219,7 +219,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -230,7 +230,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -256,7 +256,7 @@
                 <h3 class="sub-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
                 <ul class="our-team-contacts">
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -267,7 +267,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -278,7 +278,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -289,7 +289,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -315,7 +315,7 @@
                 <h3 class="sub-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
                 <ul class="our-team-contacts">
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -326,7 +326,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -337,7 +337,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -348,7 +348,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-contacts-list">
                     <a class="our-team-contacts-link" href="">
                       <svg
                         class="our-team-contacts-icon"
@@ -519,28 +519,28 @@
           <ul class="social-media-list">
             <li class="icons-social-media">
               <a class="social-media-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-media-icon-img" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-social-media">
               <a class="social-media-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-media-icon-img" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-social-media">
               <a class="social-media-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-media-icon-img" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-social-media">
               <a class="social-media-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-media-icon-img" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
