--- a/index.html
+++ b/index.html
@@ -371,19 +371,19 @@
           <h2 class="title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Banking App</h3>
@@ -392,19 +392,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/cashiess-payment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Cashless Payment</h3>
@@ -413,19 +413,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Meditation App</h3>
@@ -434,19 +434,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Taxi Service</h3>
@@ -455,19 +455,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Screen Illustrations</h3>
@@ -476,19 +476,19 @@
             </li>
 
             <li class="our-portfolio-elements">
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-
+              <div class="overlay-box">
                 <img
                   src="./images/online-courses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
                 />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="apps-info-container">
                 <h3 class="sub-title">Online Courses</h3>
